pod/ingress-treafik/whoami/whoami-deployment.yml
--- # whoami pod应用服务
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
      affinity: # 将whoami 应用容器角度到 反亲和性，调度到非标签为ingress=treafik的节点上
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms:
            - matchExpressions:
              - key: ingress
                operator: NotIn
                values: 
                  - treafik
